<resources>
    <string name="app_name">CSCB07_Project</string>

    <string name="event_page_title">Events Page</string>
    <string name="join_event">Join Event</string>
    <string name="selete_event">Select Event</string>


    <string name="edit_email">Email Address</string>
    <string name="edit_pw">Password</string>
    <string name="button_login">Login</string>
    <string name="text_register">Register</string>
    <string name="edit_name">Name</string>
    <string-array name="auth">
        <item>User</item>
        <item>Admin</item>
    </string-array>
    <string name="button_register">Register</string>
    <string name="text_back">Back</string>
    <string name="event_list">Event List</string>
    <string name="select_hour">Select Hour</string>

</resources>